# mooc-mate

MoocMate-backend/: CMakeLists.txt  picture.base64  translate
MoocMate-backend/api/: api.txt
MoocMate-backend/inc/cinatra/: cinatra.hpp  html_template.hpp
MoocMate-backend/inc/cinatra/http_server/: connection.hpp
MoocMate-backend/inc/db/: DataBase.hh
MoocMate-backend/inc/login/: LoginControl.hh
MoocMate-backend/inc/user/: User.hh
MoocMate-backend/inc/utils/: utils.hh
MoocMate-backend/src/: CMakeLists.txt  main.cc  utils.cc
MoocMate-backend/test/: CMakeLists.txt  test.cc
MoocMate-extensions/: background.html  manifest.json  popup.html
MoocMate-extensions/scripts/: background.js  common.js  contentscript.js  popup.js
MoocMate-extensions/styles/: toastr.css
MoocMate-web/: avatar.html  common.php  i_wrote.php  password.html  profile.php
MoocMate-web/css/: dashboard.css  signin.css
