CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
PROJECT(MookMate)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_CXX_COMPILER clang++)
ADD_COMPILE_OPTIONS("-std=c++1y")
ADD_COMPILE_OPTIONS("-Wall")

FIND_PACKAGE(Boost 1.55 COMPONENTS system coroutine thread unit_test_framework REQUIRED)

SUBDIRS(
    src
	test
)

ADD_CUSTOM_TARGET(debug
	COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Debug ${CMAKE_SOURCE_DIR}
	COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
	COMMENT "Switch CMAKE_BUILD_TYPE to Debug"

)

ADD_CUSTOM_TARGET(release
	COMMAND ${CMAKE_COMMAND} -DCMAKE_BUILD_TYPE=Release ${CMAKE_SOURCE_DIR}
	COMMAND ${CMAKE_COMMAND} --build ${CMAKE_BINARY_DIR} --target all
	COMMENT "Switch CMAKE_BUILD_TYPE to Release"
)
